new endpoint to stream log file
